# SNIFF

./: .gitignore  .gitmodules  OWL-ViT.py  README.md  Whisper-Text2Speech.py  YOLO Person Detection.py  handwave.py  handwave_ros.py  owl_vit_node.py  sniff_robot_node.py  speech2item.py  speech2item_test.py  wave_detect.py  webcam_node.py  yolo_node.py
bringup_files/: audio_processing_node.py  camera_processing_node.py
data_analysis/: data_analysis.ipynb  plots.ipynb  sniff_data.txt  stats.ipynb
offboard_compute/: dummy_viewer.py  visualize_detections.py
offboard_compute/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
offboard_compute/install/sniff_offboard/lib/sniff_offboard/: item_extractor_node  yolo_world_node
offboard_compute/install/sniff_offboard/share/sniff_offboard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
offboard_compute/install/sniff_offboard/share/sniff_offboard/launch/: sniff_offboard.launch.py
offboard_compute/log/: latest_build
offboard_compute/sniff_offboard/: package.xml  setup.cfg  setup.py
offboard_compute/sniff_offboard/launch/: camera_receiver.py
offboard_compute/sniff_offboard/sniff_offboard/nodes/: constants.py  item_extractor_node.py  yolo_world_node.py
onboard_vision/: camera_init.py  camera_streamer.py
